--- a/5/OJT5/src/index.css
+++ b/5/OJT5/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #f2f5f5; /* 또는 필요한 색상 값으로 대체 */
+}
